# marl

./: .gitignore  Cargo.toml  INFO.md  README.md  marl.toml
.agents/context/: MAP.md  NOTES.md  STATUS.md
.agents/plans/: plan-2026-04-25-gpu-reaction-diffusion-prototype.md  plan-2026-04-25-unified-runtime-config.md  plan-2026-05-09-enhanced-3d-viewer.md  plan-2026-05-09-viewer-gui-shell.md  plan-2026-05-10-binary-genetic-trait-dumps.md  plan-2026-05-10-documentation-update.md  plan-2026-05-10-engine-crate-decomposition.md  plan-2026-05-10-viewer-crate-decomposition.md  plan-workspace-crate-decomposition.md
.agents/spec/: 001-reaction-diffusion-as-primary-physics.md  002-tick-timescale-abstraction.md  003-ruleset-representation.md  004-light-attenuation.md  005-language-framework.md  006-species-namespace-count.md  007-energy-currency.md  2026-03-15.md  Architecture.md  OBSERVABILITY_IDEAS.md  cell-agent.md  exploration-novel-extensions.md  exploration-oee-metrics.md  field-update.md  hgt-engine.md  light-engine.md  mock-hybrid-cell-tick.md  mock-niche-construction-scenario.md  mock-quorum-sensing-scenario.md  mock-winogradsky-scenario.md  overnight-runs-readme.md  renderer.md  research-assembly-index.md  research-biochemical-abstraction.md  research-bootstrapping.md  research-gpu-field-update.md  research-literature-landscape.md
crates/marl-cell/: Cargo.toml
crates/marl-cell/src/: cell.rs  hgt.rs  lib.rs
crates/marl-config/: Cargo.toml
crates/marl-config/src/: lib.rs
crates/marl-engine/: Cargo.toml
crates/marl-engine/src/: binary_dump.rs  cell.rs  config.rs  field.rs  lib.rs  light.rs  main.rs
crates/marl-engine/src/gpu/: field_diffusion.rs
crates/marl-engine/src/sim/: mod.rs  seeding.rs  spatial.rs  starter_metabolisms.rs  stats.rs
crates/marl-engine/tests/: gpu_diffusion.rs
crates/marl-field/: Cargo.toml
crates/marl-field/src/: field.rs  lib.rs  light.rs
crates/marl-format/: Cargo.toml
crates/marl-format/src/: lib.rs
crates/marl-gpu/: Cargo.toml
crates/marl-gpu/src/: field_diffusion.rs  lib.rs
crates/marl-gpu/tests/: gpu_diffusion.rs
crates/marl-output/: Cargo.toml
crates/marl-output/src/: binary_dump.rs  data.rs  lib.rs  snapshot.rs
crates/marl-sim/: Cargo.toml
crates/marl-sim/src/: lib.rs  seeding.rs  spatial.rs  starter_metabolisms.rs  stats.rs
crates/marl-viewer-core/: Cargo.toml
crates/marl-viewer-core/src/: args.rs  camera.rs  io.rs  lib.rs  types.rs
crates/marl-viewer-render/: Cargo.toml
crates/marl-viewer-render/src/: gui.rs  renderer.rs
crates/marl-viewer-rs/: Cargo.toml
crates/marl-viewer-rs/src/: app.rs  args.rs  camera.rs  gui.rs  io.rs  main.rs  renderer.rs  viewer_raymarch.wgsl
docs/: INFO.md  SCRIPTS.md  USAGE.md
scripts/: check_binary_dump.py
src/: binary_dump.rs  cell.rs  config.rs  data.rs  field.rs  hgt.rs  lib.rs  light.rs  main.rs  snapshot.rs
src/gpu/: context.rs  mod.rs
src/gpu/shaders/: field_diffuse.wgsl
tests/: gpu_diffusion.rs
