[package]
name = "marl"
version = "0.3.0+3"
edition = "2024"

[features]
default = []
gpu = ["dep:bytemuck", "dep:pollster", "dep:wgpu"]

[dependencies]
rand = "0.9"
rand_distr = "0.5"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
bytemuck = { version = "1.25", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }
wgpu = { version = "29", optional = true }
