[workspace]
members = [
    "crates/marl-engine",
    "crates/marl-format",
    "crates/marl-viewer-rs",
]
resolver = "3"

[workspace.package]
version = "0.3.0+6"
edition = "2024"

[workspace.dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
pollster = "0.4"
rand = "0.9"
rand_distr = "0.5"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
wgpu = "29"
winit = "0.30"
