[package]
name = "marl-sim"
version.workspace = true
edition.workspace = true

[features]
default = []
gpu = ["dep:marl-gpu"]

[dependencies]
marl-config = { path = "../marl-config" }
marl-cell = { path = "../marl-cell" }
marl-field = { path = "../marl-field" }
marl-output = { path = "../marl-output" }
rand.workspace = true
marl-gpu = { path = "../marl-gpu", optional = true }
