[package]
name = "marl-viewer-rs"
version.workspace = true
edition.workspace = true

[[bin]]
name = "marl-viewer-rs"
path = "src/main.rs"

[dependencies]
marl-viewer-core = { path = "../marl-viewer-core" }
marl-viewer-render = { path = "../marl-viewer-render" }
pollster.workspace = true
winit.workspace = true
